--- a/css/style.scss
+++ b/css/style.scss
@@ -47,6 +47,7 @@ p{
 
 a{
   text-decoration: none;
+  color:white;
 }
 
 .section__left,.section__right{
@@ -146,9 +147,55 @@ header{
   }
 
 
+// fv slider
+.fv{
+  width:100%;
+  height: 80vh;
+  .fv__box{
+    width:100%;
+    height:80vh;
+    background-size: cover;
+    background-position: center;
+    width:100%;
+    height:80vh;
+    position:relative;
+    z-index: 0;
+    &::after{
+      content: "";
+      position: absolute;
+      width:100%;
+      height:100%;
+      background: inherit;
+      filter:brightness(75%);
+      z-index: -1;
+    }
+  }
+
+  .fv__1{
+    background-image: url(../img/fv__1.jpg);
+    position:relative;
+    h1{
+      position: absolute;
+      bottom: 10%;
+      right:10%;
+      color:white;
+      font-size: 4rem;
+      text-shadow: 0 2px 2px #666;
+    }
+  }
+  .fv__2{
+    background-image: url(../img/fv__2.jpg);
+  }
+  .fv__3{
+    background-image: url(../img/fv__3.jpg);
+  }
+}
+
+
+
 // main
 .main{
-  background:url(../img/fv.jpeg);
+  background-image:url(../img/fv__1.jpg);
   background-size: cover;
   width:100%;
   height:80vh;
