--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,21 @@ img {
 }
 
 .section__title {
+  position: relative;
   margin-bottom: 50px;
   text-align: center;
   font-size: 4rem;
   border-bottom: 2px solid #8DC8E7;
+}
+
+.section__title::before {
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  content: "";
+  border-bottom: solid 2px;
+  border-color: #FF5470;
+  width: 20%;
 }
 
 p {
@@ -237,6 +248,20 @@ header h1 {
 
 .practice {
   background-color: #8DC8E7;
+  position: relative;
+  padding-top: 30px;
+}
+
+.practice::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 0px 50px 100vw;
+  border-color: transparent transparent transparent white;
 }
 
 .section__blue {
