--- a/css/style.scss
+++ b/css/style.scss
@@ -35,10 +35,20 @@ img{
 }
 
 .section__title{
+  position:relative;
   margin-bottom: 50px;
   text-align: center;
   font-size:4rem;
   border-bottom: 2px solid $theme-color;
+  &::before {
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    content: "";
+    border-bottom: solid 2px;
+    border-color: #FF5470;
+    width: 20%;
+}
 }
 
 p{
@@ -234,6 +244,19 @@ header{
 // practice
 .practice{
   background-color: $theme-color;
+  position:relative;
+  padding-top:30px;
+  &::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 0px 50px 100vw;
+    border-color: transparent transparent transparent white;
+  }
 }
 
 .section__blue{
